  py-execute-statement-dedicated
  py-execute-block-dedicated
  py-execute-clause-dedicated
  py-execute-block-or-clause-dedicated
  py-execute-def-dedicated
  py-execute-class-dedicated
  py-execute-region-dedicated
  py-execute-buffer-dedicated
  py-execute-expression-dedicated
  py-execute-partial-expression-dedicated
  py-execute-line-dedicated
  py-execute-top-level-dedicated

Removed commands:

 -toggle-py-nil-docstring-style
 -py-nil-docstring-style-on
 -py-nil-docstring-style-off
 -toggle-py-onetwo-docstring-style
 -py-onetwo-docstring-style-on
 -py-onetwo-docstring-style-off
 -toggle-py-pep-257-docstring-style
 -py-pep-257-docstring-style-on
 -py-pep-257-docstring-style-off
 -toggle-py-pep-257-nn-docstring-style
 -py-pep-257-nn-docstring-style-on
 -py-pep-257-nn-docstring-style-off
 -toggle-py-symmetric-docstring-style
 -py-symmetric-docstring-style-on
 -py-symmetric-docstring-style-off
 -toggle-py-django-docstring-style
 -py-django-docstring-style-on
 -py-django-docstring-style-off

Some commands not so useful made common functions, like
  py-statement-opens-block-p
  py-statement-opens-clause-p ...

Internally used functions preferably are prefixed `py--':
  py--statement-opens-block-p
  py--statement-opens-clause-p ...

New variable `py-ipython-command' - (PATH-TO)-IPython

Boolean `py-set-fill-column-p' renamed `py-auto-fill-mode'
 Fill according to `py-docstring-fill-column' and
`py-comment-fill-column'

`py-font-lock-keywords' renamed `python-font-lock-keywords',
  lp:1314921

New booleans
- py-fast-process-p
  If `t', stuff is executed through `py-fast-...'-
  commands, suitable for large output. Result arrives
  in py-fast-output-buffer, which is not in comint-mode

Dropped booleans:
`py-start-run-py-shell',
`py-start-run-ipython-shell',
`py-pylint-offer-current-p'
`py-paragraph-fill-docstring-p'
`py-enforce-output-buffer-p'

New in version 6.1.3
---------------------

PEP8 indent-alternatives when closing a list implemented
